// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnRuleColor renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: #0;
  column-rule-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #0;
  column-rule-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #0;
  column-rule-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #0;
  column-rule-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders function 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: hasnot;
  column-rule-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: has;
  column-rule-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: hasnot;
  column-rule-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: has;
  column-rule-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: invalid.path.1;
  column-rule-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: invalid.path.1;
  column-rule-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: invalid.path.1;
  column-rule-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: invalid.path.1;
  column-rule-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: #-54881;
  column-rule-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #-54881;
  column-rule-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #-42365;
  column-rule-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #-42365;
  column-rule-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: July;
    column-rule-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: September;
    column-rule-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: July;
    column-rule-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: September;
    column-rule-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: May;
    column-rule-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: June;
    column-rule-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: April;
    column-rule-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: May;
    column-rule-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: June;
    column-rule-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule-color: April;
    column-rule-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-rule-color: July;
    column-rule-color: July;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media January {
  .c0 {
    -webkit-column-rule-color: September;
    column-rule-color: September;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

@media June {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-rule-color: July;
    column-rule-color: July;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media January {
  .c0 {
    -webkit-column-rule-color: September;
    column-rule-color: September;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: November;
    column-rule-color: November;
  }
}

@media June {
  .c0 {
    -webkit-column-rule-color: August;
    column-rule-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-rule-color: January;
    column-rule-color: January;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: December;
    column-rule-color: December;
  }
}

@media January {
  .c0 {
    -webkit-column-rule-color: April;
    column-rule-color: April;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: May;
    column-rule-color: May;
  }
}

@media June {
  .c0 {
    -webkit-column-rule-color: June;
    column-rule-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-rule-color: January;
    column-rule-color: January;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: December;
    column-rule-color: December;
  }
}

@media January {
  .c0 {
    -webkit-column-rule-color: April;
    column-rule-color: April;
  }
}

@media April {
  .c0 {
    -webkit-column-rule-color: May;
    column-rule-color: May;
  }
}

@media June {
  .c0 {
    -webkit-column-rule-color: June;
    column-rule-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: #54881;
  column-rule-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #54881;
  column-rule-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #42365;
  column-rule-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: #42365;
  column-rule-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders string 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: July;
  column-rule-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: July;
  column-rule-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: June;
  column-rule-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: June;
  column-rule-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRuleColor renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-rule-color: DarkSlateBlue;
  column-rule-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: DarkSlateBlue;
  column-rule-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: DarkSlateBlue;
  column-rule-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule-color: DarkSlateBlue;
  column-rule-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
